--- a/lume_sales/views/product_catalog.xml
+++ b/lume_sales/views/product_catalog.xml
@@ -217,8 +217,8 @@
     <!-- Side Searchbar for Lot Catalog -->
     <record id="category_grouping_search" model="ir.ui.view">
         <field name="name">Catagory Grouping</field>
-        <field name="model">product.product</field>
-        <field name="inherit_id" ref="product.product_search_form_view"/>
+        <field name="model">stock.production.lot</field>
+        <field name="inherit_id" ref="stock.search_product_lot_filter"/>
         <field name="arch" type="xml">
             <field name="name" position="after">
                 <searchpanel>
