--- a/lume_sales/views/settings.xml
+++ b/lume_sales/views/settings.xml
@@ -24,7 +24,7 @@
             <field name="name">Lume</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">res.config.settings</field>
-            <field name="view_id" ref="res_config_settings_view_form"></field>
+            <field name="view_id" ref="base.res_config_settings_view_form"></field>
             <field name="view_mode">form</field>
             <field name="target">inline</field>
             <field name="context">{'module':'lume_sales'}</field>
