--- a/lume_metrc_stock/views/stock_views.xml
+++ b/lume_metrc_stock/views/stock_views.xml
@@ -17,6 +17,23 @@
             </p>
         </field>
     </record>
+    <record id="stock_picking_type_store_to_store_transfers" model="ir.actions.act_window">
+        <field name="name">Store->Store Transfers</field>
+        <field name="res_model">stock.picking.type</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="view_mode">kanban,form</field>
+        <field name="domain">[('code', 'in', ['incoming','outgoing'])]</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+            Create a new operation type
+            </p><p>
+            The operation type system allows you to assign each stock
+            operation a specific type which will alter its views accordingly.
+            On the operation type you could e.g. specify if packing is needed by default,
+            if it should show the customer.
+            </p>
+        </field>
+    </record>
     <menuitem id="menu_metrc_receipts_stock"
         name="Receipts" sequence="2"
         parent="stock.menu_stock_warehouse_mgmt"
@@ -34,6 +51,9 @@
     <menuitem id="menu_stock_internal_transfers"
         name="Internal Transfer" sequence="3"
         action="stock_picking_type_internal_transfers"
-        parent="stock.menu_stock_warehouse_mgmt"
-        groups="stock.group_stock_user"/>
+        parent="stock.menu_stock_warehouse_mgmt"/>
+    <menuitem id="menu_stock_store_to_store_transfers"
+        name="Store->Store Transfers" sequence="31"
+        action="stock_picking_type_store_to_store_transfers"
+        parent="stock.menu_stock_warehouse_mgmt"/>
 </odoo>
