--- a/lume_sales/wizards/cancel_reason_wizard.xml
+++ b/lume_sales/wizards/cancel_reason_wizard.xml
@@ -10,7 +10,8 @@
                         <field name="reason" widget="radio"/>
                     </p>
                 <footer>
-                    <button name="action_ok" string="Confirm" type="object" default_focus="1" class="oe_highlight"/> 
+                    <button name="action_ok" string="Confirm" type="object" default_focus="1" class="oe_highlight"/>
+                    <button name="cancel" string="Cancel" class="btn-secondary" type="object"/>
                 </footer>
                 </form>
             </field>
