--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -11,7 +11,7 @@
                 <xpath expr="//sheet/div/button[@name='preview_sale_order']" position="replace">
                 </xpath>
                 <field name="payment_term_id" position="after">
-                    <field name="task" string="Task" attrs="{'invisible':[('task', '=', False)]}" />
+                    <field name="task" string="Task" attrs="{'invisible':[('task', '=', False)]}" invisible="1" />
                 </field>
                 <xpath expr="//div[@class='oe_button_box']/button[@name='action_view_delivery']/field" position="attributes">
                     <attribute name="string">Picks</attribute>
@@ -22,7 +22,7 @@
                       </button>
                 </xpath>
                 <field name="partner_id" position="after">
-                    <field name="order_type" readonly="1" />
+                    <field name="order_type" readonly="1" invisible="1" />
                 </field>
                 <xpath expr="//tree/field[@name='product_id']" position="replace">
                     <field name="order_type" invisible="1"></field>
@@ -47,6 +47,9 @@
                 <field name="payment_term_id" position="replace">
                     <field name="payment_term_id" invisible="1"></field>
                 </field>
+                <field name="pricelist_id" position="atrributes">
+                    <attribute name="invisible">1</attribute>
+                </field>
                 <xpath expr="//tree/field[@name='sequence']" position="replace">
                     <field name="sequence" invisible="1"/>
                 </xpath>
@@ -59,6 +62,11 @@
                 <xpath expr="//tree/field[@name='tax_id']" position="before">
                     <field name="lot_id"/>
                     <field name="discount_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                </xpath>
+                <xpath expr="//tree" position="attributes">
+                    <attribute name="create">false</attribute>
+                    <attribute name="editable"/>
+                    <attribute name="edit">false</attribute>
                 </xpath>
                 <xpath expr="(//header/button[@name='action_confirm'])[2]" position="replace">
                 </xpath>
