--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -47,7 +47,7 @@
                 <field name="payment_term_id" position="replace">
                     <field name="payment_term_id" invisible="1"></field>
                 </field>
-                <field name="pricelist_id" position="atrributes">
+                <field name="pricelist_id" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </field>
                 <xpath expr="//tree/field[@name='sequence']" position="replace">
