--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -50,6 +50,7 @@
                 <field name="pricelist_id" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </field>
+                <xpath expr="//label[@for='pricelist_id']" position="replace"/>
                 <xpath expr="//tree/field[@name='sequence']" position="replace">
                     <field name="sequence" invisible="1"/>
                 </xpath>
