--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -33,6 +33,17 @@
                 </xpath>
                 <field name="date_order" position="after">
                     <field name="fulfillment_type"/>
+                    <span class="o_form_label o_td_label" name="address_name" attrs="{'invisible': [('order_type', '=', 'delivery')]}">
+                        <b>Delivery Address</b>
+                    </span>
+                    <div class="o_address_format" attrs="{'invisible': [('order_type', '=', 'delivery')]}">
+                        <field name="street" placeholder="Street..." class="o_address_street" attrs="{'readonly': [('state', '=', 'done')]}"/>
+                        <field name="street2" placeholder="Street 2..." class="o_address_street" attrs="{'readonly': [('state', '=', 'done')]}"/>
+                        <field name="city" placeholder="City" class="o_address_city" attrs="{'readonly': [('state', '=', 'done')]}"/>
+                        <field name="state_id" class="o_address_state" placeholder="State" options="{'no_open': True, 'no_quick_create': True}" attrs="{'readonly': [('state', '=', 'done')]}" context="{'country_id': country_id, 'default_country_id': country_id, 'zip': zip}"/>
+                        <field name="zip" placeholder="ZIP" class="o_address_zip" attrs="{'readonly': [('state', '=', 'done')]}"/>
+                        <field name="country_id" placeholder="Country" class="o_address_country" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" attrs="{'readonly': [('state', '=', 'done')]}"/>
+                    </div>
                 </field>
                 <!-- Custom Add Product Button -->
                 <field name="order_line" position="after">
@@ -46,6 +57,9 @@
                 </field>
                 <field name="payment_term_id" position="replace">
                     <field name="payment_term_id" invisible="1"></field>
+                </field>
+                <field name="date_order" position="attributes">
+                    <attribute name="invisible">1</attribute>
                 </field>
                 <field name="pricelist_id" position="attributes">
                     <attribute name="invisible">1</attribute>
