--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -114,11 +114,15 @@
           <field name="is_caregiver" string="Caregiver"></field>
           <field name="caregiver_id" attrs="{'invisible':[('is_caregiver','=',True)],'domain':[('is_caregiver','=',True)]}"></field>
           <field name="caregiver_license" string="Caregiver Medical ID" widget="formatted_char" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}"></field>
-          <field name="patient_ids" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}">
-            <tree create="0" edit="0" delete="0" editable="bottom">
-              <field name="name"></field>
-              <field name="medical_id"></field>
-              <field name="medical_expiration"></field>
+          <field name="patient_ids" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}" widget="many2many">
+            <tree>
+              <field name="name"/>
+              <field name="medical_id"/>
+              <field name="medical_expiration"/>
+              <!-- Can put button here to check in a patient -->
+              <control>
+                <create string="Add Patient"/>
+              </control>
             </tree>
           </field>
         </field>
