--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -114,7 +114,7 @@
           <field name="is_caregiver" string="Caregiver"></field>
           <field name="caregiver_id" attrs="{'invisible':[('is_caregiver','=',True)],'domain':[('is_caregiver','=',True)]}"></field>
           <field name="caregiver_license" string="Caregiver Medical ID" widget="formatted_char" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}"></field>
-          <field name="patient_ids" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}" widget="many2many">
+          <field name="patient_ids" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}" widget="many2many" context="{'tree_view_ref':'lume_sales.patient_list_view'}">
             <tree>
               <field name="name"/>
               <field name="medical_id"/>
@@ -142,6 +142,19 @@
             <b>Address</b>
           </span>
         </xpath>
+      </field>
+    </record>
+
+    <record id="patient_list_view"  model="ir.ui.view">
+      <field name="name">lume_sales.patient</field>
+      <field name="model">res.partner</field>
+      <!-- <field name="inherit_id" ref="base.view_partner_form" /> -->
+      <field name="arch" type="xml">
+        <tree>
+          <field name="name"/>
+          <field name="medical_id"/>
+          <field name="medical_expiration"/>
+        </tree>
       </field>
     </record>
   </data>
