--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -114,11 +114,11 @@
           <field name="is_caregiver" string="Caregiver"></field>
           <field name="caregiver_id" attrs="{'invisible':[('is_caregiver','=',True)],'domain':[('is_caregiver','=',True)]}"></field>
           <field name="caregiver_license" string="Caregiver Medical ID" widget="formatted_char" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}"></field>
-          <field name="patient_ids" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}" widget="many2many" context="{'tree_view_ref':'lume_sales.patient_list_view'}">
+          <field name="patient_ids" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}" widget="many2many" context="{'tree_view_ref':'lume_sales.patient_list_view','has_caregiver':True}">
             <tree>
               <field name="name"/>
-              <field name="medical_id"/>
-              <field name="medical_expiration"/>
+              <field name="medical_id" required="context.get('has_caregiver')"/>
+              <field name="medical_expiration" required="context.get('has_caregiver')"/>
               <!-- Can put button here to check in a patient -->
               <button name="check_in_as_patient" string="Check In" type="object" class="btn-primary" invisible="not context.get('check_in_window',False)" />
               <control>
