--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -67,16 +67,16 @@
                 <xpath expr="(//header/button[@name='action_quotation_send'])[4]" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
-                <!-- Invoice buttons TODO: CHANGE THESE BACK-->
+                <!-- Invoice buttons -->
                 <xpath expr="(//header/button)[3]" position="attributes">
-                    <attribute name="invisible">0</attribute>
+                    <attribute name="invisible">1</attribute>
                 </xpath>
                 <xpath expr="(//header/button)[4]" position="attributes">
-                    <attribute name="invisible">0</attribute>
+                    <attribute name="invisible">1</attribute>
                 </xpath>
                 <!-- Not sure about this next one -->
                 <xpath expr="(//header/field)[2]" position="attributes">
-                    <attribute name="invisible">0</attribute>
+                    <attribute name="invisible">1</attribute>
                 </xpath>
                 <xpath expr="(//header/button)[3]" position="replace">
                 </xpath>
