--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -16,6 +16,7 @@
             <field name="order_type"/>
             <field name="fulfillment_type"/>
             <field name="blink_threshold"/>
+            <field name="caregiver_id"/>
           </xpath>
           <!-- Reorganize title of task -->
           <xpath expr="//strong[@class='o_kanban_record_title']" position="replace">
@@ -28,6 +29,10 @@
           <xpath expr="//div[@class='o_kanban_record_headings']/br" position="replace"/>
           <xpath expr="//div[@class='o_kanban_record_headings']/*[3]" position="replace">
             <span style="font-weight: bold;">
+                <t t-if="record.caregiver_id">
+                  <field name="caregiver_id"/>
+                  <br/>
+                </t>
                 <field name="partner_id" widget="link_many2one"/>
             </span>
             <strong><field name="monetary_display"/></strong>
