--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -115,11 +115,12 @@
           <field name="is_caregiver" string="Caregiver"></field>
           <field name="caregiver_id" attrs="{'invisible':[('is_caregiver','=',True)],'domain':[('is_caregiver','=',True)]}"></field>
           <field name="caregiver_license" string="Caregiver Medical ID" widget="formatted_char" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}"></field>
-          <field name="patient_ids" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}" widget="many2many" context="{'tree_view_ref':'lume_sales.patient_list_view','check_in_window':context.get('check_in_window'),'has_caregiver':True,'project_id':context.get('project_id'),'fulfillment_type':context.get('fulfillment_type')}">
+          <field name="patient_ids" domain="[('is_caregiver','=',False)]" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}" widget="many2many" context="{'tree_view_ref':'lume_sales.patient_list_view','check_in_window':context.get('check_in_window'),'has_caregiver':True,'project_id':context.get('project_id'),'fulfillment_type':context.get('fulfillment_type')}">
             <tree>
               <field name="name"/>
               <field name="medical_id"/>
               <field name="medical_expiration"/>
+              <field name="caregiver_id"/>
               <!-- Can put button here to check in a patient -->
               <!-- <button name="check_in_as_patient" string="Check In" type="object" class="btn-primary" invisible="not context.get('check_in_window',False)" /> -->
               <control>
@@ -158,6 +159,24 @@
           <field name="medical_expiration"/>
         </tree>
       </field>
+    </record>
+
+    <!-- Partner search view -->
+    <record id="lume_partner_search" model="ir.ui.view">
+      <field name="active" eval="True"/>
+      <field name="arch" type="xml">
+        <data>
+          <xpath expr="//search[1]/field[@name='name']" position="after">
+            <field name="medical_id"/>
+          </xpath>
+        </data>
+      </field>
+      <field name="inherit_id" ref="base.view_res_partner_filter"/>
+      <field name="mode">extension</field>
+      <field name="model">res.partner</field>
+      <field name="name">lume.partner.search</field>
+      <field name="priority">99</field>
+      <field name="type">search</field>
     </record>
   </data>
 </odoo>
