show caregiver on selection list view

--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -120,7 +120,7 @@
               <field name="name"/>
               <field name="medical_id"/>
               <field name="medical_expiration"/>
-              <field name="caregiver_id"/>
+              <!-- <field name="caregiver_id"/> -->
               <!-- Can put button here to check in a patient -->
               <!-- <button name="check_in_as_patient" string="Check In" type="object" class="btn-primary" invisible="not context.get('check_in_window',False)" /> -->
               <control>
@@ -157,6 +157,7 @@
           <field name="name"/>
           <field name="medical_id"/>
           <field name="medical_expiration"/>
+          <field name="caregiver_id"/>
         </tree>
       </field>
     </record>
